Fix deployment issue

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,23 @@
-Flask==2.3.2
+Flask==2.2.5
+gunicorn==21.2.0 # No code was selected, and the provided file appears to be a requirements.txt file for a Python project. 
+# Here's an example of how you could improve the code by adding more dependencies and organizing them into sections:
+
+# Frameworks
+Flask==2.2.5
+
+# Web Servers
 gunicorn==21.2.0
+
+# Databases
+# psycopg2-binary==2.9.5
+# mysqlclient==2.1.1
+
+# APIs and Integrations
+# requests==2.28.1
+# beautifulsoup4==4.11.1
+
+# Security
+# Flask-Security-Too==3.4.3
+
+# Utilities
+# Flask-DebugToolbar==0.11.0
